# rrmj

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
docs/: PLAN.md  (+3 more)
librrmj/: Cargo.toml
librrmj/src/: error.rs  lib.rs
librrmj/src/action/: mod.rs
librrmj/src/agent/: mod.rs  slot.rs  tests.rs  view.rs
librrmj/src/ai/: common.rs  config.rs  defense.rs  efficiency.rs  mod.rs  setup.rs  shanten.rs  strategy.rs  tests.rs
librrmj/src/ai/easy/: mod.rs  tests.rs
librrmj/src/ai/hard/: mod.rs  tests.rs
librrmj/src/ai/medium/: mod.rs  tests.rs
librrmj/src/event/: mod.rs
librrmj/src/game/: mod.rs  step.rs  tests.rs  trigger.rs  types.rs
librrmj/src/hand/: concealed.rs  kan.rs  meld.rs  mod.rs  tests.rs
librrmj/src/replay/: apply.rs  hand_snapshot.rs  mod.rs  player.rs  recording.rs  scenario_fixtures.rs  snapshot.rs  tests.rs
librrmj/src/rules/: config.rs  flow.rs  mod.rs  profile.rs  profile_trait.rs  registry.rs  tests.rs  win_path.rs
librrmj/src/rules/dora/: mod.rs  tests.rs
librrmj/src/rules/profile/: mod.rs
librrmj/src/rules/recommendations/: mod.rs  tests.rs
librrmj/src/rules/standard/: abortive.rs  cheatsheet.rs  dora.rs  fu.rs  mod.rs  patterns.rs  recommendations.rs  score.rs  tests.rs  win.rs  yaku.rs  yakuman.rs
librrmj/src/scoring/: limits.rs  mod.rs  result.rs
librrmj/src/state/: abortive.rs  calls.rs  calls_tests.rs  end_reason.rs  hand_state.rs  mod.rs  reaction.rs  tests.rs  win.rs
librrmj/src/state/calls/: mod.rs  tests.rs
librrmj/src/state/reaction/: mod.rs  tests.rs
librrmj/src/test_util/: fixtures.rs  mod.rs
librrmj/src/tile/: identity.rs  kind.rs  mod.rs  tests.rs
librrmj/src/wall/: layout.rs  mod.rs  snapshot.rs  tests.rs
librrmj/tests/: scenarios.rs
librrmj/tests/common/: fixtures.rs  mod.rs
rrmj/: Cargo.toml
rrmj-tui/: Cargo.toml
rrmj-tui/src/: error.rs  main.rs  timers.rs
rrmj-tui/src/app/: actions.rs  debug_menu.rs  debug_setup.rs  event_text.rs  hand_result.rs  load_setup.rs  mod.rs  path_input.rs  pause.rs  replay_review.rs  scenario_menu.rs  settings.rs  setup.rs  timers.rs
rrmj-tui/src/app/actions/: mod.rs
rrmj-tui/src/app/path_input/: mod.rs
rrmj-tui/src/cli/: mod.rs  tests.rs
rrmj-tui/src/config/: mod.rs  paths.rs  tests.rs
rrmj-tui/src/input/: key.rs  mod.rs
rrmj-tui/src/save/: mod.rs  tests.rs
rrmj-tui/src/scenarios/: mod.rs  tests.rs
rrmj-tui/src/settings/: tests.rs
rrmj-tui/src/theme/: mod.rs
rrmj-tui/src/ui/: debug_menu.rs  debug_setup.rs  hand_result.rs  help.rs  load_setup.rs  menu.rs  mod.rs  path_input.rs  pause.rs  popup.rs  recommendations.rs  render.rs  replay_review.rs  rules.rs  rules_content.rs  scenario_menu.rs  scores.rs  setup.rs  table.rs  widgets.rs
rrmj/src/: main.rs
rrmj/src/app/: debug_menu.rs  mod.rs  scenario_menu.rs  setup.rs  timers.rs
rrmj/src/cli/: mod.rs  tests.rs
rrmj/src/config/: mod.rs  paths.rs  tests.rs
rrmj/src/error/: mod.rs
rrmj/src/input/: key.rs
rrmj/src/logger/: mod.rs
rrmj/src/scenarios/: tests.rs
rrmj/src/settings/: mod.rs  tests.rs
rrmj/src/theme/: mod.rs
rrmj/src/ui/: menu.rs  popup.rs  recommendations.rs  replay_review.rs  scenario_menu.rs  setup.rs  widgets.rs
rrmj/src/utils/: mod.rs  tests.rs
(+103 files in other folders)
