[package]
name = "librrmj"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Riichi mahjong rules engine."
keywords = ["mahjong", "riichi", "game"]

[features]
default = []
ai = []
serde = ["dep:serde", "dep:serde_json", "ai"]
test-util = []

[dependencies]
rand = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
