[package]
name = "rrmj-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "rrmj-tui"
path = "src/main.rs"

[features]
default = []

[dependencies]
clap = { version = "4", features = ["derive"] }
librrmj = { path = "../librrmj" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
