[package]
name = "rrmj"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "rrmj"
path = "src/main.rs"

[features]
default = ["ai"]
ai = ["librrmj/ai"]
debug-menu = []

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
librrmj = { path = "../librrmj", features = ["ai", "serde"] }
ratatui = "0.30"
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
